--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title></title>
-    <link rel="stylesheet" href="/css/style.css">
+    <link rel="stylesheet" href="/COMP4537/labs/1/css/style.css">
 </head>
 <body>
     <h1 id="lab-num"></h1>
@@ -15,7 +15,7 @@
         <button onclick="location.href='writer.html'" id="go-writer"></button>
         <button onclick="location.href='reader.html'" id="go-reader"></button>
     </div>
-    <script src="/lang/messages/en/user.js"></script>
-    <script src="/js/script.js" defer></script>
+    <script src="/COMP4537/labs/1/lang/messages/en/user.js"></script>
+    <script src="/COMP4537/labs/1/js/script.js" defer></script>
 </body>
 </html>
