--- a/writer.html
+++ b/writer.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title></title>
-    <link rel="stylesheet" href="/css/style.css">
+    <link rel="stylesheet" href="/COMP4537/labs/1/css/style.css">
    
 </head>
 <body>
@@ -16,7 +16,7 @@
     <button id="add-note"></button>
     <button onclick="location.href='index.html'" id="back-to"></button>
 
-    <script src="/lang/messages/en/user.js"></script>
-    <script src="/js/script.js" defer></script>
+    <script src="/COMP4537/labs/1/lang/messages/en/user.js"></script>
+    <script src="/COMP4537/labs/1/js/script.js" defer></script>
 </body>
 </html>
