--- a/index.html
+++ b/index.html
@@ -12,8 +12,8 @@
     <h1 id="lab-num"></h1>
     <h2 id="my-name"></h2>
     <div>
-        <button onclick="location.href='writer.html'" id="go-writer"></button>
-        <button onclick="location.href='reader.html'" id="go-reader"></button>
+        <button onclick="location.href='/COMP4537/labs/1/writer.html'" id="go-writer"></button>
+        <button onclick="location.href='/COMP4537/labs/1/reader.html'" id="go-reader"></button>
     </div>
     <script src="/COMP4537/labs/1/lang/messages/en/user.js"></script>
     <script src="/COMP4537/labs/1/js/script.js" defer></script>
