--- a/reader.html
+++ b/reader.html
@@ -12,7 +12,7 @@
         <span id="fetch-time"></span>
     </div>
     <div id="notes-container"></div>
-    <button onclick="location.href='index.html'" id="back-to"></button>
+    <button onclick="location.href='/COMP4537/labs/1/index.html'" id="back-to"></button>
 
     <script src="/COMP4537/labs/1/js/script.js" defer></script>
     <script src="/COMP4537/labs/1/lang/messages/en/user.js"></script>
