--- a/writer.html
+++ b/writer.html
@@ -14,7 +14,7 @@
     </div>
     <div id="notes-container"></div>
     <button id="add-note"></button>
-    <button onclick="location.href='index.html'" id="back-to"></button>
+    <button onclick="location.href='/COMP4537/labs/1/index.html'" id="back-to"></button>
 
     <script src="/COMP4537/labs/1/lang/messages/en/user.js"></script>
     <script src="/COMP4537/labs/1/js/script.js" defer></script>
